--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^4.1.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -30,6 +31,7 @@
       "react-app/jest"
     ]
   },
+  "proxy": "http://localhost:4000",
   "browserslist": {
     "production": [
       ">0.2%",
